--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <header>
       <nav>
         <div class="row">
-          <img src="./Contents/logo-white.png" alt="logo" class="logo" />
-          <img src="./Contents/logo.png" alt="logo-black" class="logo-black" />
+          <img src="./contents/logo-white.png" alt="logo" class="logo" />
+          <img src="./contents/logo.png" alt="logo-black" class="logo-black" />
 
           <ul class="main-nav js--main-nav">
             <li>
