--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <header>
       <nav>
         <div class="row">
-          <img src="./contents/logo-white.png" alt="logo" class="logo" />
-          <img src="./contents/logo.png" alt="logo-black" class="logo-black" />
+          <img src="./resources/img/logo-white.png" alt="logo" class="logo" />
+          <img src="./resources/img/logo.png" alt="logo-black" class="logo-black" />
 
           <ul class="main-nav js--main-nav">
             <li>
@@ -189,7 +189,7 @@
       </div>
       <div class="row js--wp-3">
         <div class="col span-1-of-4 box">
-          <img src="./contents/lisbon-3.jpg" alt="lisbon" />
+          <img src="./resources/img/lisbon.jpg" alt="lisbon" />
           <h3>Lisbon</h3>
           <div class="city-feature">
             <i class="ion-ios-person icon-small"></i>
@@ -206,7 +206,7 @@
         </div>
 
         <div class="col span-1-of-4 box">
-          <img src="./contents/san-francisco.jpg" alt="lisbon" />
+          <img src="./resources/img/san-francisco.jpg" alt="lisbon" />
           <h3>San Francisco</h3>
           <div class="city-feature">
             <i class="ion-ios-person icon-small"></i>
@@ -223,7 +223,7 @@
         </div>
 
         <div class="col span-1-of-4 box">
-          <img src="./contents/berlin.jpg" alt="lisbon" />
+          <img src="./resources/img/berlin.jpg" alt="lisbon" />
           <h3>Berlin</h3>
           <div class="city-feature">
             <i class="ion-ios-person icon-small"></i>
@@ -240,7 +240,7 @@
         </div>
 
         <div class="col span-1-of-4 box">
-          <img src="./contents/london.jpg" alt="lisbon" />
+          <img src="./resources/img/london.jpg" alt="lisbon" />
           <h3>London</h3>
           <div class="city-feature">
             <i class="ion-ios-person icon-small"></i>
@@ -268,7 +268,7 @@
             Omnifood is just awesome! I just launched a startup which leaves me with no time for
             cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without
             my daily meals!
-            <cite> <img src="./contents/customer-1.jpg" alt="al" /> Alberto Duncan</cite>
+            <cite> <img src="./resources/img/customer-1.jpg" alt="al" /> Alberto Duncan</cite>
           </blockquote>
         </div>
 
@@ -278,7 +278,7 @@
             of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my
             family are so in love!
 
-            <cite> <img src="./contents/customer-2.jpg" alt="Si" /> Joana Silva </cite>
+            <cite> <img src="./resources/img/customer-2.jpg" alt="Si" /> Joana Silva </cite>
           </blockquote>
         </div>
 
@@ -288,7 +288,7 @@
             of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up
             the great work!
 
-            <cite> <img src="./contents/customer-3.jpg" alt="al" /> Milton Chapman </cite>
+            <cite> <img src="./resources/img/customer-3.jpg" alt="al" /> Milton Chapman </cite>
           </blockquote>
         </div>
       </div>
