--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="./vendors/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="./vendors/css/grid.css" />
-    <link rel="stylesheet" href="/vendors/css/animate.css" />
+    <link rel="stylesheet" href="./vendors/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="./vendors/css/ionicons.min.css" />
     <link rel="stylesheet" type="text/html" href="./vendors/fonts" />
 
